# ArrNorm

./: .gitignore  Dockerfile  README.md  arrnorm.py  iMad.py  mkdocs.yml  pyproject.toml  radcal.py  register.py  run.py  setup.py  update_arrNorm.sh
.github/workflows/: tests.yml
arrnorm/: iMad.py  radcal.py  register.py
arrnorm/auxil/: auxil.py  supervisedclass.py
auxil/: auxil.py  congrid.py  header.py  lookup.py  png.py  supervisedclass.py
core/: iMad.py  radcal.py  raster_ops.py  register.py
tests/: conftest.py  generate_expected.py  test_auxil.py  test_integration.py  test_radcal.py
tests/data/expected/: target_mask.tif  target_norm_iter15.tif  target_norm_iter5.tif  target_norm_masked.tif  target_norm_prealigned.tif  target_norm_t090.tif
