[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arrnorm"
version = "26.05"
description = "Automatic relative radiometric normalization using IR-MAD"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "Xavier C. Llano", email = "xavier.corredor.llano@gmail.com"},
]
keywords = [
    "remote sensing",
    "radiometric normalization",
    "IR-MAD",
    "change detection",
    "GIS",
    "Landsat",
]
classifiers = [
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
# gdal is intentionally listed without a version pin: the correct GDAL Python
# bindings version must match the system GDAL library and is best managed
# through conda/system packages rather than pip.
dependencies = [
    "gdal",
    "numpy>=1.20",
    "scipy>=1.5",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage   = "https://github.com/SMByC/ArrNorm"
Repository = "https://github.com/SMByC/ArrNorm"
"Bug Tracker" = "https://github.com/SMByC/ArrNorm/issues"

[project.scripts]
arrnorm = "arrnorm:main"

# ---------------------------------------------------------------------------
# Setuptools configuration
# ---------------------------------------------------------------------------

[tool.setuptools]
# arrnorm.py is the CLI entry point; include it as a top-level module so
# the console_scripts entry point can import it after installation.
py-modules = ["arrnorm"]

[tool.setuptools.packages.find]
include = ["core*"]

# ---------------------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
